# cmake-cuda-sample

./: .gitignore  CMakeLists.txt  README.md
include/: CudaTimeCalculator.hpp  cudaErrorCheck.cuh  cudaTimeCalculator.hpp  head.hpp  host.hpp  kernel.cuh
src/: cudaTimeCalculator.cpp  host.cpp  kernel.cu  main.cpp  main.cu
